Partitioned the MERSTracker primary estimate API
